--- a/pokemonList/package.json
+++ b/pokemonList/package.json
@@ -38,10 +38,12 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
-    "@mui/material": "^5.2.6",
+    "@mui/material": "^5.4.0",
     "axios": "^0.24.0",
+    "dom": "^0.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "router": "^1.3.6"
   }
 }
