--- a/pokemonList/package.json
+++ b/pokemonList/package.json
@@ -40,8 +40,10 @@
     "@material-ui/core": "^4.12.3",
     "@mui/material": "^5.4.0",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "dom": "^0.0.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "router": "^1.3.6"
