--- a/pokedex/package.json
+++ b/pokedex/package.json
@@ -27,16 +27,20 @@
     "html-webpack-plugin": "^5.4.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
+    "sass": "^1.49.7",
+    "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
     "typescript": "^4.4.4",
     "url-loader": "^4.1.1",
-    "webpack": "^5.59.1",
+    "webpack": "^5.68.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2"
   }
 }
